--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<groupId>org.statefulj.framework</groupId>
 	<artifactId>statefulj-framework-demo</artifactId>
 	<packaging>war</packaging>
-	<version>0.8-SNAPSHOT</version>
+	<version>0.8</version>
 
 	<name>statefulj-framework-demo</name>
 	<url>http://www.statefulj.org</url>
 
 	<properties>
 		<jersey.version>2.13</jersey.version>
-		<statefulj.version>0.8-SNAPSHOT</statefulj.version>
+		<statefulj.version>0.8</statefulj.version>
 		<spring.version>4.0.3.RELEASE</spring.version>
 		<spring.security.version>3.2.4.RELEASE</spring.security.version>
 		<jstl.version>1.2</jstl.version>
